finally it's not stuck together now you have to fix the wrapping but we can call it progress!!!

--- a/04flexbox/style.css
+++ b/04flexbox/style.css
@@ -8,10 +8,13 @@ main .article{
     box-shadow: 3px;
     margin: 15px;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
 }
 
 .photo{
+    display: flex;
+    justify-content: center;
     margin: 5px;
 }
 
@@ -20,6 +23,7 @@ main .article{
     width: 500px;
     flex-direction: column;
     align-items: stretch;
+    justify-content: space-between;
 }
 
 .description{
@@ -29,15 +33,16 @@ main .article{
 
 .container{
     display: flex;
-    flex-direction: row;
-    justify-content: baseline;
+    justify-content: space-between;
+    align-items: baseline;
+    flex-wrap: nowrap;
 }
 
 .hearts{ 
-justify-content: flex-start;
+    align-self: flex-start;
 }
 
 .readmore{
-    justify-content: flex-end;
+    align-self: flex-end;
 }
 
